objects/ERP_Sales_Prices_SAP__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Type_Code__c</fullName>
        <label>Calculation Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Calculation_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char_Name__c</fullName>
        <defaultValue>&quot;ZKAL_MKT_NUMBER&quot;</defaultValue>
        <label>Char Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Scale_Code__c</fullName>
        <label>Check Scale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Scale__c</fullName>
        <label>Check Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_Scale_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComPartner_Code__c</fullName>
        <label>ComPartner_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComPartner__c</fullName>
        <label>ComPartner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Ptr_Code__c</fullName>
        <label>Comm Ptr Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Ptr__c</fullName>
        <label>Comm Ptr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Class_Code__c</fullName>
        <label>Condition Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Class__c</fullName>
        <label>Condition Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Condition_Class_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discount or Surcharge</fullName>
                </value>
                <value>
                    <fullName>Prices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <label>Contract No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Mkt_Segment_Code__c</fullName>
        <label>Cust-Mkt-Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Mkt_Segment__c</fullName>
        <label>Cust-Mkt-Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Code__c</fullName>
        <label>Customer Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group_Code__c</fullName>
        <label>Customer Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group__c</fullName>
        <label>Customer Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Payment_Terms__c</fullName>
        <label>Customer Price Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Country_Code__c</fullName>
        <label>Destination_Country_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <label>Destination_Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Ref_No__c</fullName>
        <label>Disc Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Ref__c</fullName>
        <label>Disc Ref.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel__c</fullName>
        <label>Dist. Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <label>Dist. Channel Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Distributor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency_Code__c</fullName>
        <label>Document Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <label>Document Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use_Code__c</fullName>
        <label>End Use Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <label>End Use</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Code__c</fullName>
        <label>End User Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Matl_Grp_Code__c</fullName>
        <description>To store Ext Matl Grp Code value which will sync with SAP</description>
        <label>Ext Matl Grp Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Matl_Grp__c</fullName>
        <description>To store Ext Matl Grp value which will sync with SAP</description>
        <label>Ext Matl Grp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Product_Hierarchy_Code__c</fullName>
        <formula>PH1_Code__c &amp; PH2_Code__c &amp;  PH3_Code__c &amp; PH4_Code__c &amp;  PH5_Code__c &amp;  PH6_Code__c &amp;  PH7_Code__c  &amp; PH8_Code__c &amp;  PH9_Code__c</formula>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixValDate__c</fullName>
        <label>FixValDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1_Code__c</fullName>
        <label>Incoterms Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KC_SAP__c</fullName>
        <label>KC_SAP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kcode__c</fullName>
        <label>Kcode</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Code__c</fullName>
        <label>Key Combination Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <label>Key Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Segment_Code__c</fullName>
        <label>Market Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <label>Material Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_1_Code__c</fullName>
        <label>Material Group 1 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_1__c</fullName>
        <label>Material Group 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5_Key_Code__c</fullName>
        <label>Material Group 5 Key Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5_Key__c</fullName>
        <label>Material Group 5 Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group_Code__c</fullName>
        <label>Material Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group__c</fullName>
        <label>Material Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_group_2_Code__c</fullName>
        <description>To store Material group 2 Code value which will sync with SAP</description>
        <label>Material Group 2 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_group_2__c</fullName>
        <description>To store Material group 2 value which will sync with SAP</description>
        <label>Material Group 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <label>Owning Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCKC_SAP__c</fullName>
        <formula>KC_SAP__c</formula>
        <label>PCKC SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCKC__c</fullName>
        <description>Concatenation of Pricing Condition and Key Combination</description>
        <formula>Pricing_Condition_Code__c &amp;Sales_Org_Code__c&amp; Distribution_Channel_Code__c &amp; Division_Code__c &amp; Sold_To_Code__c &amp; Material_Code__c&amp;F_Product_Hierarchy_Code__c&amp; ShipTo_Code__c &amp; Sales_Office_Code__c &amp; Customer_Price_Group_Code__c &amp; Material_Price_Group_Code__c &amp; Price_List_Type_Code__c&amp; Terms_of_Payment_Code__c &amp; Project_Id__c &amp;End_Use_Code__c&amp; Market_Segment_Code__c&amp; Variant_Code__c&amp; Contract_Code__c &amp; Sales_Order_Type_Code__c &amp; ComPartner_Code__c &amp; Material_Group_5_Key_Code__c &amp; Plant_Code__c &amp; Shipping_Condition_Code__c &amp; Destination_Country_Code__c &amp; Price_Ref_Partner_Code__c &amp; Country_Code__c&amp; End_User_Code__c &amp; Customer_Hierarchy_Code__c &amp; Profit_Center_Code__c &amp; Ship_To_Country_Code__c &amp; Incoterms_1_Code__c &amp; Kcode__c &amp; Material_Group_1_Code__c &amp; Sales_District_Code__c &amp; Partner_ZF_Code__c &amp; Payer_Code__c &amp; TEXT( FixValDate__c ) &amp; Disc_Ref_No__c &amp; Campaign_Code__c &amp; Document_Currency__c &amp; State_Code__c &amp; Distributor_Code__c &amp; Sales_Order_Item_Code__c &amp;  Value_Center_Code__c &amp;  Ext_Matl_Grp_Code__c &amp;  Material_group_2_Code__c &amp;  Price_Zone_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCKC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Code__c</fullName>
        <label>PH1 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1__c</fullName>
        <label>PH1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Code__c</fullName>
        <label>PH2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2__c</fullName>
        <label>PH2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Code__c</fullName>
        <label>PH3 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3__c</fullName>
        <label>PH3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ZF_Code__c</fullName>
        <label>Partner ZF Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ZF__c</fullName>
        <label>Partner ZF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Code__c</fullName>
        <label>Payer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Fixed_Date__c</fullName>
        <description>This will hold the date of the payment term selected for the price record</description>
        <label>Payment Terms Fixed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <label>Plant_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plus_Minus_Code__c</fullName>
        <label>Plus/Minus Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plus_Minus__c</fullName>
        <label>Plus/Minus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Plus_Minus_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Holder</label>
        <referenceTo>ERP_Sales_Prices_SAP__c</referenceTo>
        <relationshipLabel>ERP Sales Prices - SAP</relationshipLabel>
        <relationshipName>ERP_Sales_Prices_SAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List_Type_Code__c</fullName>
        <label>Price List Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type__c</fullName>
        <label>Price List Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner_Code__c</fullName>
        <label>Price Ref. Partner Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner__c</fullName>
        <label>Price Ref. Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Zone_Code__c</fullName>
        <description>To store Price Zone Code value which will sync with SAP</description>
        <label>Price Zone Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Zone__c</fullName>
        <description>To store Price Zone value which will sync with SAP</description>
        <label>Price Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition_Code__c</fullName>
        <externalId>true</externalId>
        <label>Pricing Condition Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <label>Pricing Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Number__c</fullName>
        <formula>Pricing_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Request</label>
        <referenceTo>Pricing_Request__c</referenceTo>
        <relationshipLabel>ERP Sales Prices - SAP</relationshipLabel>
        <relationshipName>ERP_Sales_Prices_SAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Code__c</fullName>
        <label>Product Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Code__c</fullName>
        <label>Profit Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Used for PCL reocrds</description>
        <label>Record_Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Application_Id__c</fullName>
        <label>SAP Application Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_ID__c</fullName>
        <label>SAP Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Code__c</fullName>
        <label>Sales District Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Code__c</fullName>
        <label>Sales Office Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item_Code__c</fullName>
        <description>To store Sales order item code value which will sync with SAP</description>
        <label>Sales Order Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item__c</fullName>
        <description>To store Sales order item value which will sync with SAP</description>
        <label>Sales Order Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type_Code__c</fullName>
        <label>Sales Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type__c</fullName>
        <label>Sales Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <externalId>true</externalId>
        <label>Sales Org. Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Type__c</fullName>
        <label>Sales Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Pricing_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>ERP Sales Prices - SAP</relationshipLabel>
        <relationshipName>ERP_Sales_Prices_SAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScaleRate10__c</fullName>
        <label>ScaleRate10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScaleRate1__c</fullName>
        <label>ScaleRate1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScaleRate2__c</fullName>
        <label>ScaleRate2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Basis_Code__c</fullName>
        <label>Scale Basis Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Basis__c</fullName>
        <label>Scale Basis</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Basis_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity Scale</fullName>
                </value>
                <value>
                    <fullName>Value Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value10__c</fullName>
        <label>Scale Quantity/ Scale Value10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value1__c</fullName>
        <label>Scale Quantity/ Scale Value1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Quantity_Scale_Value2__c</fullName>
        <label>Scale Quantity/ Scale Value2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale_Type_Code__c</fullName>
        <label>Scale Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Type__c</fullName>
        <label>Scale Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>Base-Scale</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_UoM_Scale_Unit__c</fullName>
        <label>Scale UoM/Scale Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scaled_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scaled Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipTo_Code__c</fullName>
        <label>ShipTo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Country_Code__c</fullName>
        <label>ShipTo-Country Code </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Country__c</fullName>
        <label>ShipTo-Country </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>ShipTo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country_Code__c</fullName>
        <label>Ship-To Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship-To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition_Code__c</fullName>
        <label>Shipping Condition Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Code__c</fullName>
        <label>Sold To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_SAP__c</fullName>
        <formula>IF( ISBLANK(Sold_To_Code__c) ,NULL, LPAD(&apos;0000000000&apos;,10 - LEN(Sold_To_Code__c),&apos;0&apos;))+Sold_To_Code__c</formula>
        <label>Sold To-SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Id__c</fullName>
        <formula>SAP_Cluster__c  &amp; &apos;-&apos; &amp; SAP_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Code__c</fullName>
        <label>Terms of Payment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Center_Code__c</fullName>
        <description>To store Value Center Code value which will sync with SAP</description>
        <label>Value Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Center__c</fullName>
        <description>To store Value Center value which will sync with SAP</description>
        <label>Value Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Code__c</fullName>
        <label>Variant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_UoM__c</fullName>
        <description>This will hold the UoM of the volume selected for the price record</description>
        <label>Volume_UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>This will hold the volume of the price record</description>
        <label>Volume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>